fix align description

--- a/staging/css/main.css
+++ b/staging/css/main.css
@@ -176,7 +176,6 @@
 }
 @media screen and (min-width: 960px) {
   .Works-description {
-    display: inline-block;
     position: absolute;
     z-index: 3;
     width: auto;
